# ruff-runtime

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  android-configure  build.sh  dist.config.js  embedded-platforms.json  gulpfile.js  nodejs-changes.md  package.json  poly_config.json  ruff_makefile  ruffd_makefile  update-ruff_modules.md
config/: common.js  ruffos.js
doc/: Makefile  uvdoc.md
lib/uv/: .gitignore  android-build
misc/: Build.cmake  Clint.cmake  clint.py  duktape.cmake  uv-android.cmake  uv-legacy.cmake
modules/ruff_scripts/: generate.js  html.js  preprocess.js
ruff-api/: .eslintignore  .eslintrc  .gitignore  Jenkinsfile  README.md  dist.config.js  gulpfile.js  package.json
ruff-api/boot/ruff/launcher/: package.json
ruff-api/boot/ruff/ruffjs/: bootstrap.js  duktapeExtension.js  module.js  ruffEnvironment.js  startup.js
ruff-api/core/: .eslintrc
ruff-api/core/assert/: package.json
ruff-api/core/assert/src/: index.js
ruff-api/core/assert/test/: assert_test.js
ruff-api/core/buffer/: package.json
ruff-api/core/buffer/src/: index.ruff.js  index.rufflite.js
ruff-api/core/buffer/test/: buffer_test.ruff.js  buffer_test.rufflite.js  indexof_test.rufflite.js  test-buffer-indexof.ruff.js
ruff-api/core/events/: package.json
ruff-api/core/events/src/: index.js  maxListenerHandle.ruff.js
ruff-api/core/events/test/: events_test.js
ruff-api/core/ruff-driver/: package.json
ruff-api/core/ruff-driver/src/: index.js
ruff-api/core/ruff-driver/test/: ruff-driver-test.ruff.js  ruff-driver-test.rufflite.js
ruff-api/core/ruff-system-object/src/: index.js
ruff-api/core/ruff/src/: index.js  ruff-box.ruff.js  ruff-box.rufflite.js
ruff-api/core/ruff/test/: ruff_test.ruff.js
ruff-api/core/test/: package.json
ruff-api/core/test/src/: index.js
ruff-api/core/test/test/: test_require_resolve.js  test_sub.js  test_test.js
ruff-api/core/timers/: package.json
ruff-api/core/timers/src/: index.ruff.js  index.rufflite.js  interval.js  timer.js
ruff-api/core/timers/test/: test_immediate.js  test_interval.js  test_timeout.js  test_timer_memory_leak.ruff.js  test_timer_priority.js  timers_test.js
ruff-api/core/trait/: package.json
ruff-api/core/trait/src/: index.js
ruff-api/core/trait/test/: trait_test.js
ruff-api/core/util/: package.json
ruff-api/core/util/src/: index.ruff.js  index.rufflite.js
ruff-api/core/util/test/: util_test.ruff.js
ruff-api/doc/: adc.md  assert.md  buffer.md  child_process.md  console.md  dgram.md  dns.md  errors.md  events.md  fs.md  gpio.md  http.md  https.md  i2c.md  net.md  os.md  path.md  process.md  pwm.md  qei.md  querystring.md  ruff-app-runner.md  ruff-async.md  ruff-driver-runner.md  ruff-driver.md  ruff-mock.md  test.md  timers.md  trait.md  uart.md  url.md  util.md
ruff-api/driver/: .eslintrc
ruff-api/ext/_console_eval/: package.json
ruff-api/ext/_console_eval/src/: index.js
ruff-api/ext/child_process/: package.json
ruff-api/ext/connection-manager/: package.json
ruff-api/ext/console/: package.json
ruff-api/ext/errors/: package.json
ruff-api/ext/https/: package.json
ruff-api/ext/mbb-connection/: package.json
ruff-api/ext/net/: README.md
ruff-api/ext/network-connection/: package.json
ruff-api/ext/network-manager/: package.json
ruff-api/ext/os/: package.json
ruff-api/ext/path/: package.json
ruff-api/ext/poll/: package.json
ruff-api/ext/process/: package.json
ruff-api/ext/querystring/: package.json
ruff-api/ext/reader/: package.json
ruff-api/ext/ruff-app-runner/: package.json
ruff-api/ext/ruff-async/: package.json
ruff-api/ext/ruff-driver-runner/: package.json
ruff-api/ext/ruff-util/: package.json
ruff-api/ext/stream/: README.md
ruff-api/ext/url/: package.json
ruff-api/ext/zlib/: package.json
ruff-api/interface/adc/: package.json
ruff-api/interface/gpio/: package.json
ruff-api/interface/i2c/: package.json
ruff-api/interface/pwm/: package.json
ruff-api/interface/uart/: package.json
ruff-api/manifest/: ruff.js  rufflite.js
ruff-api/tools/html/: html.js  template.html
sanity_tests/: func_bc_test.js  run_byte.js
src/: CMakeLists.txt  callbacks.c  callbacks.h  dns.c  dns.h  duk_trans_socket.c  duk_trans_socket.h  duk_trans_win_socket.c  duv.c  duv.h  fs.c  fs.h  handle.c  handle.h  loop.c  loop.h  main.c  miniz.c  misc.c  misc.h  poll.c  poll.h  process.c  process.h  ruff.c  ruff.h  ruff_config.h.in  schema.c  spawn_sync.c  spawn_sync.h  stream.c  tcp.c  timer.c  timer.h  udp.c  udp.h  utils.c  utils.h
tools/: append.js  build-embed-js.js  fetch-nodejs-changes.js  heapjson_convert.py  pre-compile.js  update-hooks.js  xxd.js
tools/compiler/: CMakeLists.txt  ruff_compiler.c  ruff_compiler.h
tools/nodejs-api-doc/: _toc.md  all.md  async_hooks.md  buffer.md  child_process.md  cli.md  console.md  debugger.md  deprecations.md  dgram.md  documentation.md  domain.md  errors.md  esm.md  events.md  globals.md  http2.md  https.md  index.md  inspector.md  intl.md  n-api.md  os.md  path.md  policy.md  process.md  punycode.md  querystring.md  readline.md  repl.md  report.md  stream.md  string_decoder.md  synopsis.md  timers.md  tls.md  tracing.md  tty.md  url.md  util.md  (+4 more)
(+272 files in other folders)
